# Zena

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
examples/: connect_to_server.rs
src/: lib.rs  model.rs  protocol.rs
src/client/: app.rs  comms.rs  core.rs  db.rs  mod.rs  store.rs
src/client/components/: channel_list.rs  mod.rs
src/server/: mod.rs
