[package]
name = "Zena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.25.0"
egui = "0.25.0"
pretty_env_logger = "0.5.0"
rusqlite = "0.30.0"
rusqlite_migration = "1.1.0"
serde = "1.0.195"
