[package]
name = "zena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
eframe = "0.25.0"
egui = "0.25.0"
lazy_static = "1.4.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
rusqlite = "0.30.0"
rusqlite_migration = "1.1.0"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
